test : 검색 기능 테스트 코드 구현