@@ -1,8 +1,9 @@
 package com.example.dutchpay.controller;
 
 import com.example.dutchpay.config.TestSecurityConfig;
-import com.example.dutchpay.domain.DutchResult;
+import com.example.dutchpay.domain.type.SearchType;
 import com.example.dutchpay.service.DutchResultService;
+import com.example.dutchpay.service.PaginationService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -11,15 +12,19 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Import;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.security.test.context.support.TestExecutionEvent;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.security.test.context.support.WithUserDetails;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
-import java.util.Arrays;
 import java.util.List;
 
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.BDDMockito.given;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 
@@ -32,6 +37,8 @@ class HomeControllerTest {
     @Autowired private MockMvc mockMvc;
 
     @MockBean private DutchResultService dutchResultService;
+
+    @MockBean private PaginationService paginationService;
 
 
     @DisplayName("home 페이지 테스트")
@@ -67,17 +74,53 @@ class HomeControllerTest {
                 .andExpect(redirectedUrl("http://localhost/oauth2/authorization/kakao"));
     }
 
-    @DisplayName("이전 계산 결과 페이지 테스트 - 로그인후")
+    @DisplayName("이전 계산 결과 페이지 테스트 - 로그인후 전체 검색")
     @Test
-    @WithMockUser
+    @WithUserDetails(value = "1111", setupBefore = TestExecutionEvent.TEST_EXECUTION)
     void previousCalculations() throws Exception {
-        List<DutchResult> dutchResultList = Arrays.asList(new DutchResult(), new DutchResult());
-        when(dutchResultService.getDutchResult(any())).thenReturn(dutchResultList);
+        when(dutchResultService.searchDutchResult(any(Long.class), eq(null), eq(null), any(Pageable.class))).thenReturn(Page.empty());
+        given(paginationService.getPaginationBarNumbers(anyInt(), anyInt())).willReturn(List.of(0, 1, 2, 3, 4));
 
         mockMvc.perform(get("/previousCalculations"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("previousCalculations"))
                 .andExpect(model().attributeExists("dutchResultList"))
-                .andExpect(model().attribute("dutchResultList", dutchResultList));
+                .andExpect(model().attributeExists("paginationBarNumbers"));
+    }
+
+    @DisplayName("이전 계산 결과 페이지 테스트 - 이름 검색어 호출")
+    @Test
+    @WithUserDetails(value = "1111", setupBefore = TestExecutionEvent.TEST_EXECUTION)
+    void previousCalculationsSearchNameTest() throws Exception {
+        SearchType searchType = SearchType.NAMES;
+        String searchValue = "김";
+        when(dutchResultService.searchDutchResult(any(Long.class), eq(searchType), eq(searchValue), any(Pageable.class))).thenReturn(Page.empty());
+        given(paginationService.getPaginationBarNumbers(anyInt(), anyInt())).willReturn(List.of(0, 1, 2, 3, 4));
+
+        mockMvc.perform(get("/previousCalculations")
+                .queryParam("searchType", searchType.name())
+                .queryParam("searchValue", searchValue))
+                .andExpect(status().isOk())
+                .andExpect(view().name("previousCalculations"))
+                .andExpect(model().attributeExists("dutchResultList"))
+                .andExpect(model().attributeExists("paginationBarNumbers"));
+    }
+
+    @DisplayName("이전 계산 결과 페이지 테스트 - 날짜 검색어 호출")
+    @Test
+    @WithUserDetails(value = "1111", setupBefore = TestExecutionEvent.TEST_EXECUTION)
+    void previousCalculationsSearchDateTest() throws Exception {
+        SearchType searchType = SearchType.CREATED_AT_STRING;
+        String searchValue = "04";
+        when(dutchResultService.searchDutchResult(any(Long.class), eq(searchType), eq(searchValue), any(Pageable.class))).thenReturn(Page.empty());
+        given(paginationService.getPaginationBarNumbers(anyInt(), anyInt())).willReturn(List.of(0, 1, 2, 3, 4));
+
+        mockMvc.perform(get("/previousCalculations")
+                        .queryParam("searchType", searchType.name())
+                        .queryParam("searchValue", searchValue))
+                .andExpect(status().isOk())
+                .andExpect(view().name("previousCalculations"))
+                .andExpect(model().attributeExists("dutchResultList"))
+                .andExpect(model().attributeExists("paginationBarNumbers"));
     }
 }
